SupportModel/src/objects/Year__c.object
<CustomObject>
    <description>This Object will act as the child object of the Resource Loadind and utilized to generate Yearly chart for resource loading Data.</description>
    <fields>
        <fullName>Apr__c</fullName>
        <label>Apr</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug__c</fullName>
        <label>Aug</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <label>Dec</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE_Jan__c</fullName>
        <formula>ResourceLoadingId__r.FTE_Jan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTE Jan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <label>Feb</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <label>Jan</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul__c</fullName>
        <label>Jul</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun__c</fullName>
        <label>Jun</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar__c</fullName>
        <label>Mar</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <label>Nov</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <label>Oct</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResourceLoadingId__c</fullName>
        <label>ResourceLoadingId</label>
        <referenceTo>ResourceLoading__c</referenceTo>
        <relationshipLabel>Years</relationshipLabel>
        <relationshipName>Years</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sept__c</fullName>
        <label>Sept</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year#</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year1</fullName>
                </value>
                <value>
                    <fullName>Year2</fullName>
                </value>
                <value>
                    <fullName>Year3</fullName>
                </value>
                <value>
                    <fullName>Year4</fullName>
                </value>
                <value>
                    <fullName>Year5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>ResourceLoadingId__c</columns>
        <columns>Dec__c</columns>
        <columns>Feb__c</columns>
        <columns>Jan__c</columns>
        <columns>Jul__c</columns>
        <columns>Jun__c</columns>
        <columns>Apr__c</columns>
        <columns>Aug__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Y-{0000000}</displayFormat>
        <label>Year Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Years</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>